--- a/ch16/src/main/resources/webapp/WEB-INF/views/singers/list.jspx
+++ b/ch16/src/main/resources/webapp/WEB-INF/views/singers/list.jspx
@@ -1,29 +1,40 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <div xmlns:jsp="http://java.sun.com/JSP/Page"
  xmlns:c="http://java.sun.com/jsp/jstl/core"
+ xmlns:fmt="http://java.sun.com/jsp/jstl/fmt"
  xmlns:spring="http://www.springframework.org/tags"
- xmlns:fmt="http://java.sun.com/jsp/jstl/fmt" version="2.0">
- 
-	<h1>Singer Listing</h1>
+ version="2.0">
+<jsp:directive.page contentType="text/html;charset=UTF-8"/>
+<jsp:output omit-xml-declaration="yes"/>
+<spring:message code="label_singer_list" var="labelSingerList"/>
+<spring:message code="label_singer_first_name" var="labelSingerFirstName"/>
+<spring:message code="label_singer_last_name" var="labelSingerLastName"/>
+<spring:message code="label_singer_birth_date" var="labelSingerBirthDate"/>
+<head>
+ <spring:theme code="styleSheet" var="app_css" />
+ <spring:url value="/${app_css}" var="app_css_url" />
+ <link rel="stylesheet" type="text/css" media="screen" href="${app_css_url}" />
+</head>
+
+<h1>${labelSingerList}</h1>
 	<c:if test="${not empty singers}">
-	<table>
-		<thead>
-			<tr>
-				<th>First Name</th>
-				<th>Last Name</th>
-				<th>Birth Date</th>
-			</tr>
-		</thead>
-		<tbody>
-			<c:forEach items="${singers}" var="singer">
+	 <table>
+		 <thead>
+			 <tr>
+				<th>${labelSingerFirstName}</th>
+				<th>${labelSingerLastName}</th>
+				<th>${labelSingerBirthDate}</th>
+			 </tr>
+		 </thead>
+		 <tbody>
+			 <c:forEach items="${singers}" var="singer">
 				<tr>
-					<td>${singer.firstName}</td>
-					<td>${singer.lastName}</td>
-					<td><fmt:formatDate value="${singer.birthDate}"/></td>
+					 <td>${singer.firstName}</td>
+					 <td>${singer.lastName}</td>
+					 <td><fmt:formatDate value="${singer.birthDate}"/></td>
 				</tr>
-			</c:forEach>
-		</tbody>
-	</table>
+			 </c:forEach>
+		 </tbody>
+	 </table>
 	</c:if>
-	
 </div>
